Add dark themed UI and streaming chat

--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>NOX Agent</title>
-  <style>
-    body { font-family: Arial; margin: 2em; }
-    #messages { border: 1px solid #ccc; padding: 1em; height: 300px; overflow-y: scroll; }
-    .user { color: blue; }
-    .bot { color: green; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>NOX Agent</h1>
-  <div id="messages"></div>
-  <input id="input" placeholder="Type your message" style="width:80%"/>
-  <button onclick="send()">Send</button>
-  <script>
-    async function send() {
-      const input = document.getElementById('input');
-      const msg = input.value;
-      input.value='';
-      addMessage('user', msg);
-      const res = await fetch('/chat', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({message: msg})});
-      const data = await res.json();
-      addMessage('bot', data.reply);
-    }
-    function addMessage(who, text){
-      const div = document.createElement('div');
-      div.className=who;
-      div.textContent= text;
-      document.getElementById('messages').appendChild(div);
-    }
-  </script>
+  <div id="chat-container">
+    <div id="messages"></div>
+  </div>
+  <form id="input-form">
+    <input id="input" placeholder="Type your message" autocomplete="off" />
+    <button type="submit">Send</button>
+  </form>
+  <script src="script.js"></script>
 </body>
 </html>
