Add stop button and streaming cancel

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <form id="input-form">
     <input id="input" placeholder="Type your message" autocomplete="off" />
     <button type="submit">Send</button>
+    <button id="stop-button" type="button" disabled>Stop</button>
   </form>
   <script src="script.js"></script>
 </body>
